--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
 <body class="bg-gray-100 px-3 py-2">
 
-    <h1 class="tracking-wide text-black text-3xl">HEIC to PNG Converter</h1>
+    <h1 class="tracking-wide text-black text-3xl">HEIC to JPG Converter</h1>
 
     <label for="files">Select files:</label>
     <input type="file" id="files" name="files" accept=".heic" multiple class="rounded-lg bg-blue-400 text-white px-3 py-2 hover:bg-blue-500">
