--- a/src/index.html
+++ b/src/index.html
@@ -60,8 +60,8 @@
                     <div class="${document.getElementById("output").children.length % 2 == 0 ? "bg-gray-100" : " bg-gray-200"} mt-3 flex">
                         <img src="${imageUrl}" style="width: 200px; height: auto;">
                         <div class="pl-4 pt-2">
-                            <p>${name}</p>
-                            <button id="download-${id}" class="rounded-lg bg-blue-400 text-white px-3 py-2 hover:bg-blue-500">Download</button>
+                            <p class="text-2xl tracking-wide">${name}</p>
+                            <button id="download-${id}" class="rounded-lg bg-blue-400 text-white px-3 py-2 hover:bg-blue-500 mt-2">Download</button>
                             <p class="hidden" id="downloaded-${id}">Already downloaded*</p>
                         </div>
                     </div>
